# embedded_framework

./: .gitignore  CMakeLists.txt  main.c  ns_types.h  nsdynmemLIB.h  nsdynmem_tracker.h
.github/workflows/: style-checker.yml
common/: ns_list.h  nsdynmem_tracker_lib.h
event-loop/: CMakeLists.txt
event-loop/include/: eventOS_event.h  eventOS_event_timer.h
event-loop/platform/: arm_hal_timer.h  nsdynmemLIB_posix.c  platform_posix.c
event-loop/source/: ns_timeout.c  ns_timer.h  timer_sys.h
examples/: event_scheduler.c
nanostack-event-loop/include/: eventOS_callback_timer.h  eventOS_scheduler.h
nanostack-event-loop/platform/: arm_hal_interrupt.h  eventloop_config.h  platform_posix.c
nanostack-event-loop/source/: event.c  event.h  ns_timer.c  system_timer.c
